--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #f7f3e8;
+  background-color: #ffffff;
   border-top: 1px solid #212121;
   padding: 60px 20px 60px;
   max-width: 1280px;
