--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,11 +1,11 @@
 body {
   margin: 0;
-  background-color: #f7f3e8;
+  background-color: #fcf5e5;
 }
 
 .page {
-  background-color: #f7f3e8;
-  font-family: "Poppins", sans-serif;
+  background-color: #fcf5e5;
+  font-family: "Poppins", Arial, sans-serif;
   min-width: 320px;
   max-width: 1280px;
   margin: 0 auto;
@@ -14,4 +14,16 @@ body {
 .content {
   background-color: #f7f3e8;
   padding: 0 20px;
+}
+
+@media (min-width: 1320px) {
+  .content {
+    padding: 0;
+  }
+}
+
+@media (max-width: 630px) {
+  .content {
+    padding: 0 16px;
+  }
 }
